k8s/monitoring/ingress-grafana.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: clickenrent
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    
    # Basic Authentication
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: monitoring-basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required - Monitoring"
spec:
  ingressClassName: nginx
  rules:
  - host: cnr.aybserve.com
    http:
      paths:
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
